// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTableFooterCell align defaults to left 1`] = `
<td
  class="ouiTableFooterCell"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`OuiTableFooterCell align renders center when specified 1`] = `
<td
  class="ouiTableFooterCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--alignCenter"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`OuiTableFooterCell align renders right when specified 1`] = `
<td
  class="ouiTableFooterCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--alignRight"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`OuiTableFooterCell is rendered 1`] = `
<td
  aria-label="aria-label"
  class="ouiTableFooterCell testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiTableCellContent testClass1 testClass2"
  >
    <span
      class="ouiTableCellContent__text"
    >
      children
    </span>
  </div>
</td>
`;

exports[`OuiTableFooterCell width and style accepts style attribute 1`] = `
<td
  class="ouiTableFooterCell"
  style="width:20%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`OuiTableFooterCell width and style accepts width attribute 1`] = `
<td
  class="ouiTableFooterCell"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`OuiTableFooterCell width and style accepts width attribute as number 1`] = `
<td
  class="ouiTableFooterCell"
  style="width:100px"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`OuiTableFooterCell width and style resolves style and width attribute 1`] = `
<td
  class="ouiTableFooterCell"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;
